--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@ font-family: 'Montserrat', sans-serif;
   </head>
   <body>
     <h1>Mozilla is cool</h1>
-    <img src="C:\Users\user\Desktop\Master\web-projects\test-site\firefox1.svg.png" height="240" alt="The Mozilla Logo">
+    <img src="firefox1.svg.png" height="240" alt="The Mozilla Logo">
     <p>At Mozilla, we're a global community of,
       <ul>
         <li>technologists</li>
